chore: cleanup code (#65)
