# docs/swagger.json
@@ -484,6 +484,58 @@
                 }
             }
         },
+        "/api/v1/code/predict": {
+            "post": {
+                "description": "카테고리 예측 API 입니다. 카테고리가 존재하지 않을 시 자동으로 카테고리가 생성됩니다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "workspaceCode"
+                ],
+                "summary": "카테고리 예측 API",
+                "parameters": [
+                    {
+                        "description": "PredictCategory Body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.PredictCategoryBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/repository.Bookmark"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/customerror.CustomError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/customerror.CustomError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/customerror.CustomError"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/comment": {
             "post": {
                 "description": "댓글을 생성합니다.",
@@ -803,12 +855,12 @@
                 "summary": "워크스페이스 생성",
                 "parameters": [
                     {
-                        "description": "Workspace id",
+                        "description": "Workspace Body",
                         "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/workspace.CreateWorkspaceParam"
+                            "$ref": "#/definitions/repository.CreateWorkspaceParams"
                         }
                     }
                 ],
@@ -1114,6 +1166,56 @@
                 }
             }
         },
+        "/api/v1/workspace/:id/code": {
+            "post": {
+                "description": "워크스페이스의 코드를 생성합니다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "workspace"
+                ],
+                "summary": "워크스페이스 코드 생성",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Workspace id",
+                        "name": "workspace_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/repository.WorkspaceCode"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/customerror.CustomError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/customerror.CustomError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/customerror.CustomError"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/workspace/:workspace_id/category/:category_id": {
             "get": {
                 "description": "워크스페이스의 카테고리내의 북마크를  조회합니다.",
@@ -1399,6 +1501,17 @@
                 }
             }
         },
+        "repository.CreateWorkspaceParams": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "repository.FindBookmarkRow": {
             "type": "object",
             "properties": {
@@ -1491,6 +1604,9 @@
                 "summary": {
                     "type": "string"
                 },
+                "title": {
+                    "type": "string"
+                },
                 "workspace_id": {
                     "type": "integer"
                 }
@@ -1561,6 +1677,26 @@
                 }
             }
         },
+        "repository.WorkspaceCode": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "$ref": "#/definitions/pgtype.Timestamptz"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "updated_at": {
+                    "$ref": "#/definitions/pgtype.Timestamptz"
+                },
+                "workspace_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "request.CreateBookmarkParam": {
             "type": "object",
             "properties": {
@@ -1597,6 +1733,17 @@
             "properties": {
                 "workspace_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "request.PredictCategoryBody": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "link": {
+                    "type": "string"
                 }
             }
         },
@@ -1642,14 +1789,6 @@
                     "type": "string"
                 },
                 "refresh_token": {
-                    "type": "string"
-                }
-            }
-        },
-        "workspace.CreateWorkspaceParam": {
-            "type": "object",
-            "properties": {
-                "name": {
                     "type": "string"
                 }
             }
